--- a/SpectatorFootball/App.xaml
+++ b/SpectatorFootball/App.xaml
@@ -284,6 +284,7 @@
         <!-- Gridview header alignment left -->
         <Style x:Key="HeaderStyleLeft" TargetType="GridViewColumnHeader">
             <Setter Property="HorizontalContentAlignment" Value="Left"/>
+            <Setter Property="IsHitTestVisible" Value="False"/>
         </Style>
 
         <!-- Submit, Cancel, Back, Forward type buttons -->
@@ -294,6 +295,15 @@
             <Setter Property="Foreground" Value="Black"/>
             <Setter Property="Background" Value="White"/>
             <Setter Property="BorderBrush" Value="Black"/>
+            
+            
+        </Style>
+        
+        <!-- Standings Header styling-->
+        <Style TargetType="{x:Type GridViewColumnHeader}" BasedOn="{StaticResource {x:Type GridViewColumnHeader}}" x:Key="StandingGridHDRStyle">
+            <Setter Property="TextBlock.TextWrapping" Value="Wrap"/>
+            <Setter Property="TextBlock.Foreground" Value="Black"/>
+            <Setter Property="IsHitTestVisible" Value="False"/>
         </Style>
     </Application.Resources>
 </Application>
