Coded selecting another year

--- a/SpectatorFootball/WindowsLeague/LeagueStandings.xaml
+++ b/SpectatorFootball/WindowsLeague/LeagueStandings.xaml
@@ -13,11 +13,20 @@
                 <ColumnDefinition Width="2*" />
                 <ColumnDefinition Width="2*" />
             </Grid.ColumnDefinitions>
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                <Label Content="Year:" Height="25" Style="{StaticResource Normallbltyle}"></Label>
+                <ComboBox x:Name="standingsSeasonsdb" FontSize="14" Width="75" Style="{StaticResource ComboBoxstyle}" SelectionChanged="standingsSeasonsdb_SelectionChanged" IsEditable="False" 
+                    ItemsSource="{Binding Seasons}"
+                    DisplayMemberPath="Year"
+                    SelectedValuePath="Year"
+                    SelectedValue="{Binding CurrYear}" />
+                <Button Name="GoCurrentSeason" Style="{StaticResource appSubmitStyle}" Margin="4" IsEnabled="False" Click="GoCurrentSeason_Click" >Current Season</Button>
+            </StackPanel>
             <StackPanel Grid.Column="2" Orientation="Horizontal">
                 <Label Name="League_Logo_lbl" Style="{StaticResource MedLabelstyle}"></Label>
                 <Image Name="League_image" Visibility="Hidden" Width="120" Height="60"></Image>
             </StackPanel>
-            <!--            <Button Grid.Column="2" Name="help_btn" Focusable="false" Style="{StaticResource appHelpBTN}" Click="help_btn_Click">Help ?</Button> -->
+            <!--            <Button Grid.Column="3" Name="help_btn" Focusable="false" Style="{StaticResource appHelpBTN}" Click="help_btn_Click">Help ?</Button> -->
         </Grid>
         <Grid DockPanel.Dock="Bottom">
             <Button Name="standBack" Style="{StaticResource appSubmitStyle}" Click="standBack_Click" Width="300">- - - - Back to Main Menu - - - - </Button>
