--- a/SpectatorFootball/WindowsLeague/LeagueDraftUX.xaml
+++ b/SpectatorFootball/WindowsLeague/LeagueDraftUX.xaml
@@ -23,40 +23,48 @@
                 <Button Name="help_btn" Focusable="false" Style="{StaticResource appHelpBTN}" Click="help_btn_Click">Help ?</Button>
             </StackPanel>
         </Grid>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="top" >
-            <Button Name="stopPick" Style="{StaticResource appHelpBTN}" Click="stockPick_Click">Make Next Pick</Button>
-            <Button Name="NextPick" Style="{StaticResource appHelpBTN}" Click="NextPick_Click">Make Next Pick</Button>
-            <Button Name="simRound" Style="{StaticResource appHelpBTN}" Click="simRound_Click">Sim Round</Button>
-            <Button Name="simDraft" Style="{StaticResource appHelpBTN}" Click="simDraft_Click">Sim Draft</Button>
-            <Label Style="{StaticResource MedLabelstyle}">Spped:</Label>
-            <Slider Name="tckPickSpeed" Style="{StaticResource GeneralSlider}"  Maximum="5" TickPlacement="BottomRight" TickFrequency="1" Value="3" IsSnapToTickEnabled="True" />
-            <Label Name="lblPickSpeed" Style="{StaticResource MedLabelstyle}"></Label>
+        <StackPanel Orientation="Vertical">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="top" >
+                <Button Name="stopPick" Style="{StaticResource appHelpBTN}" Click="stockPick_Click">Make Next Pick</Button>
+                <Button Name="NextPick" Style="{StaticResource appHelpBTN}" Click="NextPick_Click">Make Next Pick</Button>
+                <Button Name="simRound" Style="{StaticResource appHelpBTN}" Click="simRound_Click">Sim Round</Button>
+                <Button Name="simDraft" Style="{StaticResource appHelpBTN}" Click="simDraft_Click">Sim Draft</Button>
+                <Label Style="{StaticResource Normallbltyle}">Speed:</Label>
+                <Slider Name="tckPickSpeed" Style="{StaticResource GeneralSlider}" Orientation="Horizontal"  Maximum="5" TickFrequency="1" Value="3" IsSnapToTickEnabled="True" />
+                <Label Name="lblPickSpeed" Style="{StaticResource MedLabelstyle}"></Label>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <Image Name="imgPickMinus3" Height="30" Width="30"></Image>
+                <Image Name="imgPickMinus2" Height="30" Width="30"></Image>
+                <Image Name="imgPickMinus1" Height="30" Width="30"></Image>
+                <Image Name="imgPickCurrent" Height="40" Width="40"></Image>
+                <Image Name="imgPickPlus1" Height="30" Width="30"></Image>
+                <Image Name="imgPickPlus2" Height="30" Width="30"></Image>
+                <Image Name="imgPickPlus3" Height="30" Width="30"></Image>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <TextBlock Name="txtAnnouncement" Style="{StaticResource DraftAnnouncementStyle}" Width="400" Height="100" TextWrapping="Wrap"></TextBlock>
+            </StackPanel>
+            <StackPanel Orientation="Vertical">
+                <ListView Name="lstPicks" Height="400" Width="570">
+                    <ListView.View>
+                        <GridView AllowsColumnReorder="true">
+                            <GridViewColumn Header="Pick Num" Width="50" DisplayMemberBinding="{Binding Path=Pick_no}" />
+                            <GridViewColumn Header="Round" Width="50" DisplayMemberBinding="{Binding Path=Round}" />
+                            <GridViewColumn Header="">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Image Name="HelmetImg" Source="{Binding Path=HelmetImage}"  Width="20" Height="20" />
+                                        </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+                            <GridViewColumn Header="Team" Width="200" DisplayMemberBinding="{Binding Path=Team_Name}" />
+                            <GridViewColumn Header="Selection" Width="200" DisplayMemberBinding="{Binding Path=Pick_Pos_Name}" />
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </StackPanel>
         </StackPanel>
-        <StackPanel Orientation="Horizontal">
-            <Image Name="imgPickMinus3" Height="30" Width="30"></Image>
-            <Image Name="imgPickMinus2" Height="30" Width="30"></Image>
-            <Image Name="imgPickMinus1" Height="30" Width="30"></Image>
-            <Image Name="imgPickCurrent" Height="40" Width="40"></Image>
-            <Image Name="imgPickPlus1" Height="30" Width="30"></Image>
-            <Image Name="imgPickPlus2" Height="30" Width="30"></Image>
-            <Image Name="imgPickPlus3" Height="30" Width="30"></Image>
-        </StackPanel>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-            <TextBlock Name="txtAnnouncement" Style="{StaticResource DraftAnnouncementStyle}" Width="300" Height="200" TextWrapping="Wrap"></TextBlock>
-        </StackPanel>
-        <StackPanel>
-            <ListView Name="lstPicks">
-                <ListView.View>
-                    <GridView AllowsColumnReorder="true">
-                        <GridViewColumn Header="Pick Num" Width="50" DisplayMemberBinding="{Binding Path=Pick_no}" />
-                        <GridViewColumn Header="Age" Width="50" DisplayMemberBinding="{Binding Path=Round}" />
-                        <GridViewColumn Header="Book" Width="250" DisplayMemberBinding="{Binding Path=Book}" />
-                        <GridViewColumn Header="MVP" Width="50" DisplayMemberBinding="{Binding Path=Mvp}" />
-                    </GridView>
-                </ListView.View>
-            </ListView>
-        </StackPanel>
-
 
     </DockPanel>
 </UserControl>
