--- a/SpectatorFootball/App.xaml
+++ b/SpectatorFootball/App.xaml
@@ -78,6 +78,24 @@
             <Setter Property="Foreground" Value="White"/>
         </Style>
 
+
+        <!-- Popup fonts label -->
+        <Style TargetType="Label" x:Key="PopupLabel">
+            <Setter Property="FontFamily" Value="Verdana"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="Background" Value="LightSlateGray"/>
+        </Style>
+        <!-- Popup fonts textblock -->
+        <Style TargetType="TextBlock" x:Key="PopupText">
+            <Setter Property="FontFamily" Value="Verdana"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="FontWeight" Value="Normal"/>
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="Background" Value="LightBlue"/>
+        </Style>
+
         <!-- Submit, Cancel, Back, Forward type buttons -->
         <Style TargetType="Button" x:Key="appSubmitStyle">
             <Setter Property="Width" Value="100"/>
