--- a/SpectatorFootball/WindowsLeague/LeagueDraftUX.xaml
+++ b/SpectatorFootball/WindowsLeague/LeagueDraftUX.xaml
@@ -12,6 +12,7 @@
         <local1:DoubleFormatConverter x:Key="DoubleFormatConverter" />
         <local1:inttoWeight x:Key="inttoWeight" />
         <local1:SpeedInttoString x:Key="SpeedInttoString" />
+        <local1:isNullConverter x:Key="isNullConverter" />
     </UserControl.Resources>    
     <DockPanel Height="730">
         <Grid DockPanel.Dock="Top">
@@ -44,7 +45,7 @@
             </StackPanel>
             <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
                 <Label HorizontalAlignment="Center" Style="{StaticResource Conflbltyle}">Draft Tracker</Label>
-                <ListView Name="lstPicks" Style="{StaticResource StandingsGridStyle}" Height="200" Width="570">
+                <ListView Name="lstPicks" Style="{StaticResource StandingsGridStyle}" SelectionMode="Single" Height="200" Width="570">
                     <ListView.View>
                         <GridView AllowsColumnReorder="false">
                             <GridView.ColumnHeaderContainerStyle>
@@ -70,7 +71,16 @@
 
             <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
                 <Label HorizontalAlignment="Center" Style="{StaticResource Conflbltyle}">Draft Pool</Label>
-                <ListView Name="lstDraftPlayers" MouseDoubleClick="lstDraftPlayers_Click" Style="{StaticResource StandingsGridStyle}" Height="200" Width="400">
+                <ListView Name="lstDraftPlayers" MouseDoubleClick="lstDraftPlayers_Click" Style="{StaticResource StandingsGridStyle}" SelectionMode="Single" Height="200" Width="400">
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="{x:Type ListViewItem}"  >
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding Franchise_ID, Converter={StaticResource isNullConverter}}" Value="false">
+                                    <Setter Property="Background" Value="Gray"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </ListView.ItemContainerStyle>
                     <ListView.View>
                         <GridView AllowsColumnReorder="false">
                             <GridView.ColumnHeaderContainerStyle>
