--- a/SpectatorFootball/MainWindow.xaml
+++ b/SpectatorFootball/MainWindow.xaml
@@ -25,7 +25,7 @@
                 <MenuItem Name="MenuSchedule" Header="Schedule" />
                 <MenuItem Name="MenuDraft" Header="Draft" Click= "Show_LeagueDraft" />
                 <MenuItem Name="MenuFreeAgency" Header="Free Agency" Click= "Show_FreeAgency" />
-                <MenuItem Name="MenuTrainingCamp" Header="Training Camp" />
+                <MenuItem Name="MenuTrainingCamp" Header="Training Camp" Click= "Show_TrainingCamp" />
                 <MenuItem Name="MenuInjuries" Header="Injuries" />
                 <MenuItem Name="MenuPlayoffs" Header="Playoffs" />
                 <MenuItem Name="MenuLeagueInfo" Header="League Info" />
