--- a/SpectatorFootball/WindowsLeague/TrainingCampUX.xaml
+++ b/SpectatorFootball/WindowsLeague/TrainingCampUX.xaml
@@ -3,9 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local1="clr-namespace:SpectatorFootball.BindingConverters"  
              xmlns:local="clr-namespace:SpectatorFootball.WindowsLeague"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <local1:StatusConverter x:Key="StatusConverter" />
+    </UserControl.Resources>
     <DockPanel Height="730">
         <Grid DockPanel.Dock="Top">
             <Grid.ColumnDefinitions>
@@ -29,7 +33,22 @@
             </StackPanel>
             <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
                 <Label HorizontalAlignment="Center" Style="{StaticResource Conflbltyle}">Training Camp Tracker</Label>
-                <ListView Name="lstTrainingCamp" Style="{StaticResource StandingsGridStyle}" SelectionMode="Single" Height="200" Width="570">
+                <ListView Name="lstTrainingCamp" Style="{StaticResource StandingsGridStyle}" SelectionMode="Single" Height="225" Width="370">
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="{x:Type ListViewItem}">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding Status}" Value="1">
+                                    <Setter Property="Background" Value="IndianRed" />
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding Status}" Value="2">
+                                    <Setter Property="Background" Value="Yellow" />
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding Status}" Value="3">
+                                    <Setter Property="Background" Value="LightGreen" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </ListView.ItemContainerStyle>
                     <ListView.View>
                         <GridView AllowsColumnReorder="false">
                             <GridView.ColumnHeaderContainerStyle>
@@ -45,8 +64,7 @@
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
                             <GridViewColumn Header="Team" Width="200" DisplayMemberBinding="{Binding Path=Team_Name}" />
-                            <GridViewColumn Header="" Width="100" DisplayMemberBinding="{Binding Path=Transaction}" />
-                            <GridViewColumn Header="Selection" Width="200" DisplayMemberBinding="{Binding Path=Pick_Pos_Name}" />
+                            <GridViewColumn Header="Status" Width="100" DisplayMemberBinding="{Binding Path=Status, Converter={StaticResource  StatusConverter}}" />
                         </GridView>
                     </ListView.View>
                 </ListView>
