--- a/SpectatorFootball/WindowsLeague/TrainingCamp_Results_Popup.xaml
+++ b/SpectatorFootball/WindowsLeague/TrainingCamp_Results_Popup.xaml
@@ -6,12 +6,12 @@
         xmlns:local1="clr-namespace:SpectatorFootball.BindingConverters"
         xmlns:local="clr-namespace:SpectatorFootball.WindowsLeague"
         mc:Ignorable="d"
-       Height ="390" Width="400" WindowStyle="none" ResizeMode="NoResize" ShowInTaskbar="False" Topmost="True">
+       Height ="600" Width="1000" WindowStyle="none" ResizeMode="NoResize" ShowInTaskbar="False" Topmost="True">
     <Window.Resources>
         <local1:iPosConverter x:Key="iPosConverter" />
     </Window.Resources>
     <Border Style="{StaticResource popupBD}" BorderThickness="1">
-        <StackPanel Style="{StaticResource popupSP}" Height="380" Width="390" Orientation="Vertical" >
+        <StackPanel Style="{StaticResource popupSP}" Height="590" Width="990" Orientation="Vertical" >
             <StackPanel Orientation="Horizontal">
                 <Image Name="imgTeamHelmet" Width="100" Height="100"></Image>
                 <Label Style="{StaticResource popupTT}" Name="lblTeamName" HorizontalAlignment="Center"></Label>
@@ -19,15 +19,15 @@
             <StackPanel Orientation="Horizontal">
                 <Label Style="{StaticResource popupTT}" Name="lblTrainingCampYear" HorizontalAlignment="Center"></Label>
             </StackPanel>
-            <StackPanel Style="{StaticResource popupSP}" Width="370" Height="300" Margin="5,5,5,0" Orientation="Horizontal" >
-                <GroupBox FontSize="18" FontWeight="Bold" Style="{StaticResource GroupBoxstyle}" >
+            <StackPanel Style="{StaticResource popupSP}" Width="990" Height="408" Margin="5,5,5,0" Orientation="Horizontal" >
+                <GroupBox FontSize="11" FontWeight="Bold" Style="{StaticResource PopupGroupBoxstyle}" >
                     <GroupBox.Header>
                         Made Team:
                     </GroupBox.Header>
-                    <StackPanel Width="450" Orientation="horizontal" >
+                    <StackPanel Width="480" Height="700" Orientation="horizontal" >
                         <StackPanel Orientation="vertical">
                             <Label Style="{StaticResource popupTT}" HorizontalAlignment="Center">Offense</Label>
-                            <ListView Margin="10" Name="lvMadeOffense" HorizontalContentAlignment="left"  Background="LightGray" Width="200" Height="220">
+                            <ListView Margin="10" Name="lvMadeOffense" HorizontalContentAlignment="left"  Background="LightGray" Width="220" Height="350" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                                 <ListView.View>
                                     <GridView AllowsColumnReorder="false">
                                         <GridView.ColumnHeaderContainerStyle>
@@ -50,7 +50,7 @@
                                                 <DataTemplate>
                                                     <TextBlock Width="160">
                                         <Run Text="{Binding First_Name}" />
-                                        <Run Text=" " /> <!-- space -->
+                                        <Run Text="" /> <!-- space -->
                                         <Run Text="{Binding Last_Name}" />
                                                     </TextBlock>
                                                 </DataTemplate>
@@ -62,7 +62,7 @@
                         </StackPanel>
                         <StackPanel Orientation="vertical">
                             <Label Style="{StaticResource popupTT}" HorizontalAlignment="Center">Defense</Label>
-                            <ListView Margin="10" Name="lvMadeDefense" HorizontalContentAlignment="left"  Background="LightGray" Width="200" Height="220">
+                            <ListView Margin="10" Name="lvMadeDefense" HorizontalContentAlignment="left"  Background="LightGray" Width="220" Height="350"  ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                                 <ListView.View>
                                     <GridView AllowsColumnReorder="false">
                                         <GridView.ColumnHeaderContainerStyle>
@@ -85,7 +85,7 @@
                                                 <DataTemplate>
                                                     <TextBlock Width="160">
                                         <Run Text="{Binding First_Name}" />
-                                        <Run Text=" " /> <!-- space -->
+                                        <Run Text="" /> <!-- space -->
                                         <Run Text="{Binding Last_Name}" />
                                                     </TextBlock>
                                                 </DataTemplate>
@@ -97,14 +97,14 @@
                         </StackPanel>
                     </StackPanel>
                 </GroupBox>
-                <GroupBox FontSize="18" FontWeight="Bold" Style="{StaticResource GroupBoxstyle}" >
+                <GroupBox FontSize="11" FontWeight="Bold" Style="{StaticResource PopupGroupBoxstyle}" >
                     <GroupBox.Header>
                         Cut:
                     </GroupBox.Header>
-                    <StackPanel Width="450" Orientation="horizontal" >
+                    <StackPanel Width="480" Height="700" Orientation="horizontal" >
                         <StackPanel Orientation="vertical">
                             <Label Style="{StaticResource popupTT}" HorizontalAlignment="Center">Offense</Label>
-                            <ListView Margin="10" Name="lvCutOffense" HorizontalContentAlignment="left"  Background="LightGray" Width="200" Height="220">
+                            <ListView Margin="10" Name="lvCutOffense" HorizontalContentAlignment="left"  Background="LightGray" Width="220" Height="350"  ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                                 <ListView.View>
                                     <GridView AllowsColumnReorder="false">
                                         <GridView.ColumnHeaderContainerStyle>
@@ -127,7 +127,7 @@
                                                 <DataTemplate>
                                                     <TextBlock Width="160">
                                         <Run Text="{Binding First_Name}" />
-                                        <Run Text=" " /> <!-- space -->
+                                        <Run Text="" /> <!-- space -->
                                         <Run Text="{Binding Last_Name}" />
                                                     </TextBlock>
                                                 </DataTemplate>
@@ -139,7 +139,7 @@
                         </StackPanel>
                         <StackPanel Orientation="vertical">
                             <Label Style="{StaticResource popupTT}" HorizontalAlignment="Center">Defense</Label>
-                            <ListView Margin="10" Name="lvCutDefense" HorizontalContentAlignment="left"  Background="LightGray" Width="200" Height="220">
+                            <ListView Margin="10" Name="lvCutDefense" HorizontalContentAlignment="left"  Background="LightGray" Width="220" Height="350"  ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                                 <ListView.View>
                                     <GridView AllowsColumnReorder="false">
                                         <GridView.ColumnHeaderContainerStyle>
@@ -162,7 +162,7 @@
                                                 <DataTemplate>
                                                     <TextBlock Width="160">
                                         <Run Text="{Binding First_Name}" />
-                                        <Run Text=" " /> <!-- space -->
+                                        <Run Text="" /> <!-- space -->
                                         <Run Text="{Binding Last_Name}" />
                                                     </TextBlock>
                                                 </DataTemplate>
